syntax = "proto3";
package sge.legacy.ovm.v1beta;

import "sge/legacy/ovm/v1beta/vote.proto";

option go_package = "github.com/sge-network/sge/x/legacy/ovm/types";

// PubkeysChangeProposalPayload indicates data of public keys changes proposal
// ticket.
message PubkeysChangeProposalPayload {
  // public_keys contain new pub keys to be added to public keys.
  repeated string public_keys = 1;
  // leader_index is the universal unique identifier of the public key.
  uint32 leader_index = 2;
}

// ProposalVotePayload indicates vote data ticket.
message ProposalVotePayload {
  // proposal_id is the id of the proposal.
  uint64 proposal_id = 1;
  // vote is the chosen option for the vote.
  ProposalVote vote = 2;
}
