syntax = "proto3";
package sgenetwork.sge.ovm;

import "gogoproto/gogo.proto";
import "sgenetwork/sge/ovm/key_vault.proto";
import "sgenetwork/sge/ovm/params.proto";
import "sgenetwork/sge/ovm/proposal.proto";
import "sgenetwork/sge/ovm/stats.proto";

option go_package = "github.com/sge-network/sge/x/legacy/ovm/types";

// GenesisState defines the ovm module's genesis state.
message GenesisState {
  // params contains parameters of ovm module.
  Params params = 1 [ (gogoproto.nullable) = false ];
  // key_vault trusted keys from genesis file.
  KeyVault key_vault = 2 [ (gogoproto.nullable) = false ];
  // pubkeys_change_proposals is the finished proposal list for the
  // public keys change.
  repeated PublicKeysChangeProposal pubkeys_change_proposals = 3
      [ (gogoproto.nullable) = false ];
  // proposal_stats holds the proposal statistics.
  ProposalStats proposal_stats = 4 [ (gogoproto.nullable) = false ];
}
