syntax = "proto3";
package sgenetwork.sge.ovm;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "sgenetwork/sge/ovm/ticket.proto";
import "sgenetwork/sge/ovm/vote.proto";

option go_package = "github.com/sge-network/sge/x/ovm/types";

// PublicKeysChangeProposal is the type for the proposal for additions and
// removals of pub keys.
message PublicKeysChangeProposal {
  // id is the sequential id of the proposal generated by the blockchain.
  uint64 id = 1;
  // creator is the account address of the proposal creator.
  string creator = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  // modifications contain the ticket payload of the proposal.
  PubkeysChangeProposalPayload modifications = 3
      [ (gogoproto.nullable) = false ];
  // votes contains the votes of the proposal.
  repeated Vote votes = 4;
  // start_ts is the block time that the proposal is set.
  int64 start_ts = 5 [
    (gogoproto.customname) = "StartTS",
    (gogoproto.jsontag) = "start_ts",
    json_name = "start_ts"
  ];
  // result is the result of the finished proposal.
  ProposalResult result = 6;
  // result_meta is the metadata related to the result of the finished proposal.
  string result_meta = 7;
  // finish_ts is the block time that the proposal is set as finished.
  int64 finish_ts = 8 [
    (gogoproto.customname) = "FinishTS",
    (gogoproto.jsontag) = "finish_ts",
    json_name = "finish_ts"
  ];
  // status is the status of a proposal.
  ProposalStatus status = 9;
}

// ProposalResult is the enum type for the proposal result.
enum ProposalResult {
  // unchosen value
  PROPOSAL_RESULT_UNSPECIFIED = 0;
  // approved
  PROPOSAL_RESULT_APPROVED = 1;
  // rejected
  PROPOSAL_RESULT_REJECTED = 2;
  // expired
  PROPOSAL_RESULT_EXPIRED = 3;
}

// ProposalStatus is the enum type for the proposal status.
enum ProposalStatus {
  // unchosen value
  PROPOSAL_STATUS_UNSPECIFIED = 0;
  // active
  PROPOSAL_STATUS_ACTIVE = 1;
  // finished
  PROPOSAL_STATUS_FINISHED = 2;
}
